# xpgui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  README.md
include/xpgui/: log.h  menu.h  platform.h  theme.h
src/: log.cpp  menu_win32.cpp  theme_linux_gtk3.cpp  theme_linux_gtk4.cpp  theme_macos.mm  theme_stub.cpp  theme_win32.cpp
tests/: test_log.cpp  test_theme.cpp
